sample-ingress.yaml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"
---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image
---

kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=banana"
---

kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image
# ---
# Simple Path based routing
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: example-ingress
#   annotations:
#     ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#         - path: /apple
#           backend:
#             serviceName: apple-service
#             servicePort: 5678
#         - path: /banana
#           backend:
#             serviceName: banana-service
#             servicePort: 5678
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: jenkins.apps.tkgi.lab.khadilkar.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: jenkins
          servicePort: 80
  - host: apple.apps.tkgi.lab.khadilkar.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: apple-service
          servicePort: 5678
  - host: banana.apps.tkgi.lab.khadilkar.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: banana-service
          servicePort: 5678
